--- a/manager/Components/Pages/Users.razor
+++ b/manager/Components/Pages/Users.razor
@@ -1,10 +1,10 @@
-﻿@page "/auth"
+﻿@page "/users"
 
 @using Microsoft.AspNetCore.Authorization
 
 @attribute [Authorize]
 
-<PageTitle>Auth</PageTitle>
+<PageTitle>Users</PageTitle>
 
 <h1>You are authenticated</h1>
 
